--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,10 +9,12 @@ Description: Factors have driven people to extreme measures, like ordering
     be made less maddening? Let's find out. This is a slightly more serious
     effort than the toy package, foofactors, created in STAT 545A. But only
     slightly. I just want to play with some of these functions for now ...
-Depends:
+Depends: 
     R (>= 3.2.2)
 License: MIT + file LICENSE
 LazyData: true
 RoxygenNote: 5.0.1.9000
 Suggests: ggplot2,
     testthat
+URL: https://github.com/jennybc/refactor
+BugReports: https://github.com/jennybc/refactor/issues
